# Disaster-Robot-Simulation

./: README.md  q_table_simple.npy  results_biased_qlearning.csv  results_ppo_monitor.csv  results_qlearning.csv  simple_env.py  tester.py  train_biasedqlearning.py  train_ppo.py  train_qlearning.py
install/: local_setup.sh  setup.sh
install/disaster_robot_description/share/disaster_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/disaster_robot_description/share/disaster_robot_description/cmake/: disaster_robot_descriptionConfig-version.cmake  disaster_robot_descriptionConfig.cmake
install/disaster_robot_description/share/disaster_robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/disaster_robot_description/share/disaster_robot_description/launch/: robot_gazebo.launch.py
install/disaster_robot_description/share/disaster_robot_description/urdf/: disaster_robot.urdf
install/disaster_robot_description/share/disaster_robot_description/worlds/: disaster_scene.world  empty.world
log/: latest_build
src/disaster_robot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/disaster_robot_description/launch/: robot_gazebo.launch.py
src/disaster_robot_description/scripts/: checkLIDAR.py
src/disaster_robot_description/urdf/: disaster_robot.urdf
src/disaster_robot_description/worlds/: disaster_scene.world
(+2 files in other folders)
