<?xml version="1.0"?>
<package format="3">
  <name>disaster_robot_description</name>
  <version>0.0.1</version>
  <description>Disaster robot description and simulation assets.</description>
  <maintainer email="ani-root@todo.todo">ani-root</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
